prevent word wrap on contact info

--- a/src/components/CloudChallengeResume/resume.module.css
+++ b/src/components/CloudChallengeResume/resume.module.css
@@ -65,6 +65,7 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 
 .contactInfoField {
